--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-    <header>
-        <nav>
-            <a href="/">WebStudio</a>
-            <ul>
+<body class="body">
+    <header class="header">
+        <nav class="nav">
+            <a class="logo" href="/">Web<span class="logo-studio">Studio</span></a>
+            <ul class="nav-links">
                 <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="header-contacts">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <!-- Герой -->
-        <section>
-            <h1>Эффективные решения <br /> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения <br /> для вашего бизнеса</h1>
+            <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <!-- Чем мы занимаемся -->
         <section>
-            <ul>
+            <ul class="activities">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -57,7 +60,7 @@
             </section>
         </section>
         <!-- Наша команда -->
-        <section>
+        <section class="team">
             <h2>Наша команда</h2>
             <ul>
                 <li>
@@ -82,10 +85,10 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="/">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
+    <footer class="footer">
+        <a class="logo" href="/">Web<span class="footer-logo-studio">Studio</span></a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="footer-contacts">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>     
