--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav class="nav">
             <a class="logo" href="/">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-links">
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="" class="active">Студия</a></li>
+                <li><a href="./portfolio.html" >Портфолио</a></li>
+                <li><a href="#contacts">Контакты</a></li>
             </ul>
         </nav>
         <ul class="header-contacts">
@@ -85,7 +85,7 @@
             </ul>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <a class="logo" href="/">Web<span class="footer-logo-studio">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="footer-contacts">
