--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
         <nav class="nav">
             <a class="logo" href="/">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-links">
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="/">Студия</a></li>
+                <li><a href="./portfolio.html" class="active">Портфолио</a></li>
+                <li><a href="#contacts">Контакты</a></li>
             </ul>
         </nav>
         <ul class="header-contacts">
@@ -50,7 +50,7 @@
             </li>
             <li>
                 <a href="">
-                    <img src="/images/seafood.jpg" alt="вывеска морского ресторана" width="370">
+                    <img src="./images/seafood.jpg" alt="вывеска морского ресторана" width="370">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </a>
@@ -99,7 +99,7 @@
             </li>
         </ul>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <a class="logo" href="/">Web<span class="footer-logo-studio">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="footer-contacts">
